--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"private": "true",
 	"license": "MIT-0",
 	"scripts": {
-		"prepare": "husky install"
+		"prepare": "husky"
 	},
 	"dependencies": {
 
